fixed all the tests